@@ -1,4 +1,5 @@
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.UUID;
 
 /**
@@ -92,9 +93,10 @@ public class Advisor extends User{
      * Sets the currently selected student based on their unique ID.
      * @param id The unique ID of the student.
      */
-    public void setCurrentStudent(UUID id) 
+    public boolean setCurrentStudent(UUID id) 
     {
-        this.currentStudent = findStudent(id);
+        this.currentStudent = this.findStudent(id);
+        return this.currentStudent != null;
     }
 
     /**
@@ -123,7 +125,8 @@ public class Advisor extends User{
     public void addStudent(Student student) 
     {
         this.studentList.add(student);
-        this.currentStudent =  this.studentList.getLast();
+        ArrayList<Student> students = this.getStudentList();
+        this.currentStudent = students.get(students.size() - 1);
     }
 
     /**
@@ -133,7 +136,7 @@ public class Advisor extends User{
      */
     public boolean removeStudent(UUID id) 
     {
-        Student student = findStudent(id);
+        Student student = this.findStudent(id);
         this.studentList.remove(student);
         
         if(currentStudent.equals(student)) {
@@ -156,6 +159,20 @@ public class Advisor extends User{
 
         for(int i = 0; i < this.studentList.size(); i++) {
             if(this.studentList.get(i).getID().equals(id)) {
+                return this.studentList.get(i);
+            }
+        }
+        return null;
+    }
+    public Student findStudent(String studentID)
+    {
+        if(this.studentList.size() == 0) {
+            System.out.println("Student list is empty");
+            return null;
+        }
+        System.out.println("Running findStudent");
+        for(int i = 0; i < this.studentList.size(); i++) {
+            if(this.studentList.get(i).getStudentID().equals(studentID)) {
                 return this.studentList.get(i);
             }
         }
@@ -220,5 +237,62 @@ public class Advisor extends User{
 
     public String toStringAccount() {
         return super.toString();
+    }
+
+    public static void main(String[] args) {
+        // Test Advisor Overloader
+        Advisor newAdvisor = new Advisor("Aarsh", "Patel", "aarsh@email.sc.edu", "test1", false);
+
+        //Test Advisor Constructor
+        Advisor newAdvisor2 = new Advisor("Aarsh", "Patel", "johndoe@email.sc.edu", "test2", new ArrayList<Student>(), true);
+
+        //Test getStudentList
+        System.out.println(newAdvisor2.getStudentList());
+        System.out.println(newAdvisor.getStudentList());
+
+        //Test getCurrentStudent
+        System.out.println(newAdvisor2.getCurrentStudent());
+        System.out.println(newAdvisor.getCurrentStudent());
+
+        //Test getIsAdmin
+        System.out.println(newAdvisor2.getIsAdmin());
+        System.out.println(newAdvisor.getIsAdmin());
+
+        //Test setStudentList
+        ArrayList<Student> studentList = new ArrayList<Student>();
+        studentList.add(new Student("John", "Doe", "john@email.sc.edu", "test", "X67283832"));
+        newAdvisor.setStudentList(studentList);
+        System.out.println(newAdvisor.getStudentList());
+        System.out.println(newAdvisor2.getStudentList());
+
+        //Test setCurrentStudent
+        newAdvisor.setCurrentStudent(studentList.get(0).getID());
+        System.out.println(newAdvisor.getCurrentStudent());
+
+        //Test setAdmin
+        newAdvisor.setAdmin(true);
+        System.out.println(newAdvisor.getIsAdmin());
+
+        //Test addStudent
+        String type = "Bachelors";
+        String name = "Computer Science";
+        int totalCredits = 125;
+        HashMap<Course, Integer> courses = new HashMap<>();
+        courses.put(new Course("Vector Calculus", "MATH", "241", "", 3, new ArrayList<Season>(), new ArrayList<Prerequisites>()), 1);
+        ArrayList<ElectiveCategory> electives = new ArrayList<>();
+        newAdvisor.addStudent(new Student("Jane", "Doe", "", "", "X72838291", "SOPHOMORE", newAdvisor, new ArrayList<String>(), new Degree(type, name, totalCredits, courses, electives), 3.5, 3.5, "ACTIVE"));
+        System.out.println(newAdvisor.getStudentList());
+
+        //Test removeStudent
+        newAdvisor.removeStudent(newAdvisor.getStudentList().get(0).getID());
+        System.out.println(newAdvisor.getStudentList());
+
+        //Test findStudent
+        System.out.println(newAdvisor.findStudent(newAdvisor.getStudentList().get(0).getID()).toString());
+
+        //Test editStudentFirstName
+        newAdvisor.setCurrentStudent(newAdvisor.getStudentList().get(0).getID());
+        newAdvisor.editStudentFirstName("John");
+        System.out.println(newAdvisor.getStudentList().get(0).getFirstName());
     }
 }
